{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 50,
  "lineage": "75da9c34-f100-0b55-c064-23fca822cdf3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/duper-project-1/regions/us-central1/networkEndpointGroups/litellm-proxy-neg-tf",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-04-01T02:00:40.526-07:00",
            "enable_cdn": false,
            "fingerprint": "kdLAssg_dFU=",
            "generated_id": 5257015294498529367,
            "id": "projects/duper-project-1/global/backendServices/litellm-api-backend-tf",
            "load_balancing_scheme": "EXTERNAL",
            "name": "litellm-api-backend-tf",
            "port_name": "http",
            "project": "duper-project-1",
            "protocol": "HTTPS",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/securityPolicies/litellm-api-policy-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/backendServices/litellm-api-backend-tf",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.proxy",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.api_policy",
            "google_service_account.proxy_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "iap_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/duper-project-1/regions/us-central1/networkEndpointGroups/litellm-proxy-neg-tf",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-04-01T02:00:40.057-07:00",
            "enable_cdn": false,
            "fingerprint": "EujpTrFpNfE=",
            "generated_id": 114356801572528215,
            "iap": [
              {
                "oauth2_client_secret_sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
              }
            ],
            "id": "projects/duper-project-1/global/backendServices/litellm-proxy-backend-tf",
            "load_balancing_scheme": "EXTERNAL",
            "name": "litellm-proxy-backend-tf",
            "port_name": "http",
            "project": "duper-project-1",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/backendServices/litellm-proxy-backend-tf",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.proxy",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_service_account.proxy_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.54.116.133",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-01T01:51:47.260-07:00",
            "id": "projects/duper-project-1/global/addresses/litellm-proxy-ip-tf",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "litellm-proxy-ip-tf",
            "prefix_length": 0,
            "project": "duper-project-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/addresses/litellm-proxy-ip-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "psc_api_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "192.168.255.240",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-04-01T05:39:44.828-07:00",
            "id": "projects/duper-project-1/global/addresses/google-api-psc-ip-tf",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "google-api-psc-ip-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/networks/default",
            "prefix_length": 0,
            "project": "duper-project-1",
            "purpose": "PRIVATE_SERVICE_CONNECT",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/addresses/google-api-psc-ip-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/duper-project-1/global/forwardingRules/litellm-proxy-forwarding-rule-tf",
            "ip_address": "34.54.116.133",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "litellm-proxy-forwarding-rule-tf",
            "port_range": "443-443",
            "project": "duper-project-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/forwardingRules/litellm-proxy-forwarding-rule-tf",
            "target": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/targetHttpsProxies/litellm-proxy-https-proxy-tf"
          },
          "dependencies": [
            "google_cloud_run_v2_service.proxy",
            "google_compute_backend_service.api_backend",
            "google_compute_backend_service.iap_backend",
            "google_compute_global_address.default",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.api_policy",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.url_map",
            "google_service_account.proxy_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "psc_api_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/duper-project-1/global/forwardingRules/pscgoogleapistf",
            "ip_address": "192.168.255.240",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "pscgoogleapistf",
            "network": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/networks/default",
            "project": "duper-project-1",
            "psc_connection_id": "86374552923865072",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/forwardingRules/pscgoogleapistf",
            "service_directory_registrations": [
              {
                "namespace": "goog-psc-default-8429511313167764287",
                "service_directory_region": "us-central1"
              }
            ],
            "target": "all-apis"
          },
          "dependencies": [
            "google_compute_global_address.psc_api_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "api_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Block all except allowed IP",
            "fingerprint": "AtCT3rXg3M0=",
            "id": "projects/duper-project-1/global/securityPolicies/litellm-api-policy-tf",
            "name": "litellm-api-policy-tf",
            "project": "duper-project-1",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Allow user IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "112.168.208.241/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Default deny all",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/securityPolicies/litellm-api-policy-tf",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-01T02:01:47.237-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/duper-project-1/global/targetHttpsProxies/litellm-proxy-https-proxy-tf",
            "name": "litellm-proxy-https-proxy-tf",
            "project": "duper-project-1",
            "proxy_bind": false,
            "proxy_id": 7410620735479177236,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/targetHttpsProxies/litellm-proxy-https-proxy-tf",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/sslCertificates/litellm-proxy-cert-tf"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/urlMaps/litellm-proxy-url-map-tf"
          },
          "dependencies": [
            "google_cloud_run_v2_service.proxy",
            "google_compute_backend_service.api_backend",
            "google_compute_backend_service.iap_backend",
            "google_compute_managed_ssl_certificate.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.api_policy",
            "google_compute_url_map.url_map",
            "google_service_account.proxy_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-01T02:01:35.366-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/backendServices/litellm-api-backend-tf",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "t2rrQAmgoSY=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "mllllm.com"
                ],
                "path_matcher": "litellm-matcher"
              }
            ],
            "id": "projects/duper-project-1/global/urlMaps/litellm-proxy-url-map-tf",
            "map_id": 7735397654072483840,
            "name": "litellm-proxy-url-map-tf",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/backendServices/litellm-api-backend-tf",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "litellm-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/ui",
                      "/ui/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/backendServices/litellm-proxy-backend-tf",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/key",
                      "/key/*",
                      "/v1",
                      "/v1/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/backendServices/litellm-api-backend-tf",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "duper-project-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/duper-project-1/global/urlMaps/litellm-proxy-url-map-tf",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_v2_service.proxy",
            "google_compute_backend_service.api_backend",
            "google_compute_backend_service.iap_backend",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_compute_security_policy.api_policy",
            "google_service_account.proxy_sa"
          ]
        }
      ]
    }
  ]
}